clusters/production/media/frigate/frigate-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: frigate
      app.kubernetes.io/name: frigate
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: frigate
        app.kubernetes.io/name: frigate
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: feature.node.kubernetes.io/pci-0880_1ac1.present
                operator: In
                values:
                - "true"
            - matchExpressions:
              - key: feature.node.kubernetes.io/usb-fe_1a6e_089a.present
                operator: In
                values:
                - "true"
      containers:
      - env:
        - name: TZ
          value: Canada/Eastern
        image: ghcr.io/blakeblackshear/frigate:0.16.0-tensorrt # {"$imagepolicy": "flux-system:frigate"}
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            nvidia.com/gpu: 1
        #  requests:
        #    nvidia.com/gpu: "1"
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: frigate
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        - containerPort: 1935
          name: rtmp
          protocol: TCP
        - containerPort: 8554
          name: rtsp
          protocol: TCP
        - containerPort: 8555
          name: webrtc
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /usr/local/nginx/conf/proxy_trusted_headers.conf
          name: proxy-trusted-headers
          subPath: proxy_trusted_headers.conf
        - mountPath: /dev/bus/usb
          name: coral-dev
        - mountPath: /dev/apex_0
          name: coral-pci
        - mountPath: /config
          name: frigate-config
        - mountPath: /data
          name: data
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /media/frigate
          name: frigate-media
      volumes:
      - hostPath:
          path: /dev/bus/usb
          type: ""
        name: coral-dev
      - hostPath:
          path: /dev/apex_0
          type: ""
        name: coral-pci
      - emptyDir: {}
        name: data
      - emptyDir:
          medium: Memory
          sizeLimit: 1Gi
        name: dshm
      - name: frigate-config
        persistentVolumeClaim:
          claimName: pvc-frigate-config
      - name: frigate-media
        persistentVolumeClaim:
          claimName: pvc-frigate-media
      - name: proxy-trusted-headers
        configMap:
          name: proxy-trusted-headers
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: frigate-svc
  name: frigate-tcp
  namespace: default
spec:
  loadBalancerIP: 10.0.0.244
  ports:
  - name: frigate-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  - name: frigate-1935
    port: 1935
    protocol: TCP
    targetPort: 1935
  - name: frigate-8554
    port: 8554
    protocol: TCP
    targetPort: 8554
  - name: frigate-8555
    port: 8555
    protocol: TCP
    targetPort: 8555
  - name: frigate-8971
    port: 8971
    protocol: TCP
    targetPort: 8971
  selector:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: frigate-svc
  name: frigate-udp
  namespace: default
spec:
  loadBalancerIP: 10.0.0.244
  ports:
  - name: frigate-8555
    port: 8555
    protocol: UDP
    targetPort: 8555
  selector:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
  type: LoadBalancer
